cambiando color de header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-color: #f4f4f4;
         }
         header {
-            background-color: #4CAF50;
+            background-color: #6982d9;
             color: white;
             text-align: center;
             padding: 1rem 0;
