--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-color: #f4f4f4;
         }
         header {
-            background-color: #6982d9;
+            background-color: #8080b6;
             color: white;
             text-align: center;
             padding: 1rem 0;
@@ -42,7 +42,7 @@
             margin-top: 20px;
         }
         footer {
-            background-color: #333;
+            background-color: #8080b6;
             color: white;
             text-align: center;
             padding: 10px 0;
@@ -51,6 +51,12 @@
     </style>
 </head>
 <body>
+    <nav>
+        <a href="index.html">Inicio</a>
+        <a href="sobre-mi.html">Sobre mí</a>
+        <a href="proyectos.html">Proyectos</a>
+        <a href="contacto.html">Contacto</a>
+    </nav>
 
     <header>
         <h1>Scarlett Neira Giddings</h1>
