--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
             padding: 0;
             background-color: #f4f4f4;
         }
+        nav {
+            background-color: #8080b6;
+            padding: 1rem;
+            text-align: center;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+            font-weight: bold;
+        }
         header {
             background-color: #8080b6;
             color: white;
