actualizando color header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-color: #f4f4f4;
         }
         nav {
-            background-color: #8080b6;
+            background-color: #b199db;
             padding: 1rem;
             text-align: center;
         }
