--- a/proyectos.html
+++ b/proyectos.html
@@ -10,23 +10,23 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #eed7c5;
         }
         header {
-            background-color: #8080b6;
+            background-color: #d8a7b1;
             color: white;
             padding: 10px 0;
             text-align: center;
         }
         nav a {
-            color: white;
+            color: #333;
             padding: 15px;
             text-decoration: none;
             text-transform: uppercase;
             display: inline-block;
         }
         nav a:hover {
-            background-color: #8080b6;
+            background-color: #d8a7b1;
         }
         .container {
             max-width: 1200px;
@@ -60,7 +60,7 @@
             margin-bottom: 10px;
         }
         .project-content a {
-            color: #6982d9;
+            color: #cbc3e3;
             text-decoration: none;
         }
         .project-content a:hover {
