--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #eed7c5;
         }
         nav {
             background-color: #b199db;
@@ -17,13 +17,13 @@
             text-align: center;
         }
         nav a {
-            color: white;
+            color: #333;
             text-decoration: none;
             margin: 0 15px;
             font-weight: bold;
         }
         header {
-            background-color: #8080b6;
+            background-color: #d8a7b1;
             color: white;
             text-align: center;
             padding: 1rem 0;
@@ -53,7 +53,7 @@
             margin-top: 20px;
         }
         footer {
-            background-color: #8080b6;
+            background-color: #d8a7b1;
             color: white;
             text-align: center;
             padding: 10px 0;
