--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -9,21 +9,21 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #eed7c5;
         }
         nav {
-            background-color: #8080b6;
+            background-color:#d8a7b1;
             padding: 1rem;
             text-align: center;
         }
         nav a {
-            color: white;
+            color: #333;
             text-decoration: none;
             margin: 0 15px;
             font-weight: bold;
         }
         header {
-            background-color: #8080b6;
+            background-color: #d8a7b1;
             color: white;
             text-align: center;
             padding: 1rem 0;
