cambiando color denuevo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-color: #eed7c5;
         }
         nav {
-            background-color: #b199db;
+            background-color: #d8a7b1;
             padding: 1rem;
             text-align: center;
         }
@@ -139,3 +139,4 @@
 </body>
 </html>
 
+#https://www.color-hex.com/color-palette/1051253
