cambiando color denuevo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-color: #eed7c5;
         }
         nav {
-            background-color: #d8a7b1;
+            background-color: #eed7c5;
             padding: 1rem;
             text-align: center;
         }
